Sat May 11 18:57:07 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Comment out test basica-9 until I get around to
	actually fixing it (the -d vs. CVS/Root change broke it).

Sat May  4 12:33:02 1996  Ian Lance Taylor  <ian@cygnus.com>

	Extract the head revision directly from the RCS file when
	possible, rather than execing co.
	* rcs.c (RCS_reparsercsfile): Set delta_pos field.
	(getrcskey): Add lenp parameter.  Change all callers.
	(RCS_fast_checkout): New function.
	(annotate_fileproc): If PARTIAL is not set, just fseek to
	delta_pos.
	* rcs.h (struct rcsnode): Add delta_pos field.
	(RCS_fast_checkout): Declare.
	* diff.c (diff_file_nodiff): Call RCS_fast_checkout rather than
	RCS_checkout.
	* import.c (update_rcs_file): Likewise.
	* no_diff.c (No_Difference): Likewise.
	* patch.c (patch_fileproc): Likewise.
	* update.c (checkout_file): Likewise.
	(patch_file): Likewise.
	(join_file): Likewise.

Fri May 10 09:39:49 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): -d now overrides CVS/Root.

Thu May  9 19:45:24 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: Remove comment listing commands at beginning.  It was
	out of date and redundant with the help.

Thu May  9 09:33:55 1996  Greg A. Woods  <woods@most.weird.com>

	* main.c: add 'init' to opening comment listing commands

	* mkmodules.c (init): fix to recognize argc==-1 as hint to call
	usage() [should make "cvs init -H" work as expected]

Wed May  8 15:02:49 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Set EXPR in the case that the expr in the path is the
	one that we want.

Wed May  8 14:06:24 1996  Greg A. Woods  <woods@most.weird.com>

	* sanity.sh (test): - convert all '[' to test ala GCD

Wed May  8 13:46:56 1996  Greg A. Woods  <woods@most.weird.com>

	* sanity.sh (expr): - make a valiant attempt to find GNU expr
	- Patch from Larry Jones:
	sanity test deep-4 failed with "expr: arg list too long"